[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/restart_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/home.png" type="Texture" id=4]
[ext_resource path="res://assets/home_pressed.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0.803922, 0.843137, 0.839216, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/restart.png-e3341f5ab3201ffaa3fc76965a1ab56e.stex"

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TurnsLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 180.0
margin_top = 10.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.843137, 0.839216, 1 )
text = "Turns: 0"
valign = 1

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 180.0
margin_top = 50.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.843137, 0.839216, 1 )
text = "Score: 0"
valign = 1

[node name="RestartButton" type="TextureButton" parent="."]
editor/display_folded = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -68.0
margin_right = 68.0
margin_bottom = -20.0
texture_normal = SubResource( 2 )
texture_pressed = ExtResource( 3 )
texture_focused = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="RestartButton"]
margin_left = -4.0
margin_top = 44.0
margin_right = 52.0
margin_bottom = 61.0
custom_colors/font_color = Color( 0.803922, 0.843137, 0.839216, 1 )
text = "restart"
align = 1
valign = 1

[node name="ExitButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -68.0
margin_right = -20.0
margin_bottom = -20.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="ExitButton"]
margin_left = 4.0
margin_top = 44.0
margin_right = 48.0
margin_bottom = 61.0
custom_colors/font_color = Color( 0.803922, 0.843137, 0.839216, 1 )
text = "menu"
align = 1
valign = 1

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
